# MusicOrganizer2

./: .gitignore
api/: .pdm.toml  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
api/clients/: dynamodb.py  spotify.py
api/handlers/: add_album_to_collection.py  add_or_remove_album_from_collection.py  collection_details.py  create_collection.py  delete_collection.py  get_collections.py  get_saved_albums.py  login_callback.py  login_redirect.py
api/models/: collection.py  user.py
api/resources/: collections-table.yml  users-table.yml
api/serializers/: serializers.py
api/utils/: utils.py
