[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Igor Binkowski", email = "ibinkowski@apptension.com"},
]
dependencies = ["boto3~=1.19", "tekore~=4.0"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
